--- a/force-app/main/default/lwc/lineItems/lineItems.html
+++ b/force-app/main/default/lwc/lineItems/lineItems.html
@@ -12,20 +12,22 @@
             </lightning-card>
         </template>
 
-        <lightning-datatable
-            key-field="Id"
-            data={lineItemWrappers}
-            columns={columns}
-            show-row-number-column
-            row-number-offset={rowOffset}
-            hide-checkbox-column>
-        </lightning-datatable>
+        <template if:true={showTable}>
+            <lightning-datatable
+                key-field="Id"
+                data={lineItemWrappers}
+                columns={columns}
+                show-row-number-column
+                row-number-offset={rowOffset}
+                hide-checkbox-column>
+            </lightning-datatable>
+        </template>
 
         <div class="slds-m-around--medium">
             <lightning-button
                     class="slds-m-left_medium"
                     variant="brand"
-                    label="Load"
+                    label={btnLoad}
                     onclick={handleLoadClick}
                     style="width: 150px">
             </lightning-button>
@@ -41,7 +43,7 @@
             <lightning-button
                     class="slds-m-left_medium"
                     variant="brand-outline"
-                    label={showBtnName}
+                    label={btnShowJSON}
                     onclick={handleShowClick}
                     style="width: 150px">
             </lightning-button>
