removed btn's width style in my lwc for HW

--- a/force-app/main/default/lwc/lineItems/lineItems.html
+++ b/force-app/main/default/lwc/lineItems/lineItems.html
@@ -28,24 +28,21 @@
                     class="slds-m-left_medium"
                     variant="brand"
                     label={btnLoad}
-                    onclick={handleLoadClick}
-                    style="width: 150px">
+                    onclick={handleLoadClick}>
             </lightning-button>
 
             <lightning-button
                     class="slds-m-left_medium"
                     variant="brand"
                     label="Display"
-                    onclick={handleDisplayClick}
-                    style="width: 150px">
+                    onclick={handleDisplayClick}>
             </lightning-button>
 
             <lightning-button
                     class="slds-m-left_medium"
                     variant="brand-outline"
                     label={btnShowJSON}
-                    onclick={handleShowClick}
-                    style="width: 150px">
+                    onclick={handleShowClick}>
             </lightning-button>
         </div>
 
